--- a/lab4/Untitled.ipynb
+++ b/lab4/Untitled.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": 2,
    "id": "9e8a75d3",
    "metadata": {},
    "outputs": [],
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 4,
    "id": "4a6a45ff",
    "metadata": {},
    "outputs": [
@@ -239,7 +239,7 @@
        "[2049279 rows x 8 columns]"
       ]
      },
-     "execution_count": 166,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -260,31 +260,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 3,
    "id": "a742dad8",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "array([('16/12/2006', '17:24:00', 4.216, 0.418, 234.84, 18.4, 0., 1., 17.),\n",
-       "       ('16/12/2006', '17:25:00', 5.36 , 0.436, 233.63, 23. , 0., 1., 16.),\n",
-       "       ('16/12/2006', '17:26:00', 5.374, 0.498, 233.29, 23. , 0., 2., 17.),\n",
-       "       ...,\n",
-       "       ('26/11/2010', '21:00:00', 0.938, 0.   , 239.82,  3.8, 0., 0.,  0.),\n",
-       "       ('26/11/2010', '21:01:00', 0.934, 0.   , 239.7 ,  3.8, 0., 0.,  0.),\n",
-       "       ('26/11/2010', '21:02:00', 0.932, 0.   , 239.55,  3.8, 0., 0.,  0.)],\n",
-       "      dtype=[('Date', '<U10'), ('Time', '<U8'), ('Global_active_power', '<f8'), ('Global_reactive_power', '<f8'), ('Voltage', '<f8'), ('Global_intensity', '<f8'), ('Sub_metering_1', '<f8'), ('Sub_metering_2', '<f8'), ('Sub_metering_3', '<f8')])"
-      ]
-     },
-     "execution_count": 167,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2049280\n"
+     ]
     }
    ],
    "source": [
     "def CreateNP(filepath):\n",
-    "    # Define data types for each column\n",
     "    dtypes = [('Date', '<U10'), ('Time', '<U8'), ('Global_active_power', '<f8'),\n",
     "              ('Global_reactive_power', '<f8'), ('Voltage', '<f8'), ('Global_intensity', '<f8'),\n",
     "              ('Sub_metering_1', '<f8'), ('Sub_metering_2', '<f8'), ('Sub_metering_3', '<f8')]\n",
@@ -296,7 +285,8 @@
     "    return data\n",
     "\n",
     "data = CreateNP(\"household_power_consumption.txt\")\n",
-    "data"
+    "data\n",
+    "print(len(data))"
    ]
   },
   {
@@ -1677,7 +1667,7 @@
     "                                 & (selected_households[\"Sub_metering_3\"] < selected_households[\"Sub_metering_2\"])]\n",
     "    first_half_len = len(group2) // 2\n",
     "    \n",
-    "    result_first_half = group2.iloc[::3, :] \n",
+    "    result_first_half = group2.iloc[:first_half_len:3] \n",
     "    result_second_half = group2.iloc[first_half_len::4, :]\n",
     "    final_result = pd.concat([result_first_half, result_second_half])\n",
     "    return final_result\n",
@@ -1957,7 +1947,6 @@
    ],
    "source": [
     "def Eveningnp(data):\n",
-    "    # Extract the hour part from the \"Time\" column\n",
     "    hours = np.array([int(time.split(':')[0]) for time in data[\"Time\"]])\n",
     "    filtered_data = data[(hours > 18) & (data['Global_active_power'] > 6)]\n",
     "    filtered_data2 = filtered_data[\n",
